registro y persistencia del carrito

--- a/Project/.env
+++ b/Project/.env
@@ -1,4 +1,4 @@
 # URL del Backend
 # En local: http://localhost:8080
 # En EC2: http://TU_IP_PUBLICA:8080
-VITE_API_URL=http://localhost:8080
+VITE_API_URL=http://13.217.238.182:8080
